Fix battle menu layout issue. Prepare for user battle.

--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ button {
     padding-left: 10px;
 }
 
-label {
+.formlabel {
     width: 12%;
     display: inline-block;
 }
